--- a/src/components/contact/scss/styles.scss
+++ b/src/components/contact/scss/styles.scss
@@ -4,12 +4,12 @@
 	width: 100vw;
 }
 
-.hero {	
+.hero {
 	background-image: url("../../assets/1920x650_contact.jpg");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	min-height: 600px;
+	min-height: 650px;
 	padding: 0;
 	margin: 0;
 }
