--- a/src/components/home/scss/_carousel.scss
+++ b/src/components/home/scss/_carousel.scss
@@ -2,7 +2,7 @@
 	background-size: cover;
   background-repeat: no-repeat;
   background-position: center 140px;
-  min-height: 800px;
+  min-height: 720px;
   width: 100vw;
   flex: 1 0 auto;
   transition: transform 0.5s ease-in-out;
@@ -104,13 +104,13 @@ h1 {
   padding: 0 5%;
 }
 
-$buttonSize: 8rem;
+$buttonSize: 7rem;
 
 .carousel__button {
   border-radius: 50%;
   border: none;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   background: none;
   position: absolute;
   top: 40%;
@@ -125,8 +125,6 @@ $buttonSize: 8rem;
     border-width: 2rem 2rem 0 0;
     border-radius: 10px;
     border-color: rgba(255, 255, 255, 0.7);
-    // box-shadow: 5px -5px 3px 3px #000;
-    // filter: drop-shadow(1rem -1rem 1px #000);
     content: '';
     display: inline-block;
     left: 0.15em;
