--- a/src/components/home/scss/styles.scss
+++ b/src/components/home/scss/styles.scss
@@ -61,6 +61,13 @@ section {
 				max-width: 80%;
 			}
 
+			.headerWrapper {
+				padding: 10px 0;
+				background: $secondaryColour;
+				min-height: 52px;
+				position: relative;
+			}
+
 			h3 {
 				font-size: 1.6rem;
 				color: white;
@@ -68,22 +75,27 @@ section {
 				background: $secondaryColour;
 				font-weight: normal;
 				padding: 5px 35px;
-				min-height: 52px;
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
 			}
 
 			p {
-				min-height: 100px;
+				min-height: 120px;
 				padding-top: 10px;
 			}
 
 			button {
 				margin: 20px 25px;
+				width: 40%;
 				background: white;
 				color: $primaryColour;
 				border: 1px solid $primaryColour;
 				border-radius: 8px;
 				padding: 6px;
 				font-size: 1.6rem;
+				position: relative;
+				bottom: 0px;
 
 				&:hover {
 					background: $primaryColour;
