--- a/src/components/services/scss/styles.scss
+++ b/src/components/services/scss/styles.scss
@@ -3,7 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center 100px;
-  min-height: 600px;
+  min-height: 650px;
 }
 
 .services {
@@ -35,13 +35,18 @@ ul {
 	flex-direction: row;
 	flex-wrap: wrap;
 	list-style-type: disc;
-	list-style-position: inside;
+  padding: 0 15px;
 
 	li {
-		width: 50%;
+		width: 40%;
 		font-size: 1.6rem;
 		color: white;
-		margin-bottom: 10px;
+    margin-bottom: 10px;
+    list-style-position: outside;
+
+    &:nth-child(odd) {
+      margin-right: 150px;
+    }
 	}
 }
 
